# libpq_build

./: CMakeLists.txt  Dummy.txt  POC_pqxx.sln  README.md
Debug/: POC_pqxx.ilk
POC_pqxx/: CMakeLists.txt  POC_pqxx.vcxproj  POC_pqxx.vcxproj.filters  Source.cpp  Source.h
POC_pqxx/Debug/: vc142.idb
POC_pqxx/Debug/POC_pqxx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  POC_pqxx.lastbuildstate  POC_pqxx.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
POC_pqxx/Release/POC_pqxx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  POC_pqxx.lastbuildstate  POC_pqxx.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: POC_pqxx.iobj  POC_pqxx.ipdb
