# CMakeList.txt : CMake project for POC_pqxx, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeProject_POC_pqxx "Source.cpp" "Source.h")

# TODO: Add tests and install targets if needed.
